# shader_effect

shader_effect/: CMakeLists.txt  Main.qml  main.cpp  res.qrc
shader_effect/shaders/: black_white.frag  black_white.vert
